--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
-body {
+html, body {
   height: 100%;
-  width: 100%;
+  scrollbar-width: none;
+  margin: 0;
+  padding: 0;
   background-color: #222629;
   font-family: Arial, Helvetica, sans-serif;
-  overflow-x: hidden;
 }
 
